--- a/thuthesis/data/chap01.tex
+++ b/thuthesis/data/chap01.tex
@@ -9,16 +9,16 @@
 	\item 当整个系统足够庞大时，第三方本身的安全性仍然需要更多的措施来保障。一个集中各方数据的第三方很自然的会是攻击者的首要目标。第三方数据库的泄漏将将远大于两个药企之间直接共享数据带来的损失。
 \end{itemize}
 
-对此，我们的想法是，一个去中心化，或是部分去中心化的解决方案可以很大程度上地解决如上这些问题。具体地说，我们考虑采用MPC（Secure Multi-party Computation，多方安全计算）来实现制药企业之间所需的信息共享。由于采用MPC协议可能需要交换的信息量过大，这时我们考虑先进行一次 tf-idf 采样，然后用SVD算法将数据点（本文中通常是药物分子的指纹）投影到低维空间\cite{Wan086033}以降低需要交互数据量。下面我们将对所涉及的数个基本概念进行简单介绍。
+对此，我们的想法是，一个去中心化，或是部分去中心化的解决方案可以很大程度上地解决如上这些问题。具体地说，我们考虑采用MPC（Secure Multi-party Computation，多方安全计算）来实现制药企业之间所需的信息共享。由于采用MPC协议可能需要交换的信息量过大，这时我们考虑先进行一次 tf-idf 采样，然后用SVD算法将数据点（本文中通常是药物分子的指纹）投影到低维空间\citeu{Wan086033}以降低需要交互数据量。下面我们将对所涉及的数个基本概念进行简单介绍。
 
-\section{分子的相似度及分子指纹的基本概念\cite{CERETOMASSAGUE201558}}
+\section{分子的相似度及分子指纹的基本概念\citeu{CERETOMASSAGUE201558}}
 
 不同分子之间的相似度本身是一个相对主观的概念。分子结构的复杂性也导致了一般意义上这个问题的困难。对此，通常的做法是对原始的分子结构进行一定程度的抽象和简化。其中，最常见的方式是将分子结构转化成一个比特串，即所谓的分子指纹（Molecular Fingerprint）。
 
 假设我们得到了两个分子的指纹，分别是比特串$A[1\dots l]$和$B[1\dots l]$。这里为简单其见，我们假设这个指纹具有定长$l$。这样一来，我们可以在$A,B$间定义一些常见的分子相似度如下：
 \begin{table}[H]
 	\centering
-	\caption{一些常见的相似度定义\cite{CERETOMASSAGUE201558}}
+	\caption{一些常见的相似度定义\citeu{CERETOMASSAGUE201558}}
 	\begin{tabular}{l l l}
 		\hline
 		相似度名称 & 表达式 & 取值范围\\
@@ -38,32 +38,53 @@ b&=|\{i:A[i]=0\wedge B[i]=1\}|\\
 c&=|\{i:A[i]=1\wedge B[i]=1\}|
 \end{align*}
 
-下面我们考虑如何去计算分子指纹的问题\cite{CERETOMASSAGUE201558}。大多数分子指纹只用到了二维的分子图，而少部分可能用到分子的三维信息，后者在药效团指纹中尤其常见。主要的指纹采集方法包括基于键值的子结构指纹，拓扑或基于路径的指纹，或者是环形指纹。
+下面我们考虑如何去计算分子指纹的问题\citeu{CERETOMASSAGUE201558}。大多数分子指纹只用到了二维的分子图，而少部分可能用到分子的三维信息，后者在药效团指纹中尤其常见。主要的指纹采集方法包括基于键值的子结构指纹，拓扑或基于路径的指纹，或者是圆形指纹。
 
-\section{MPC的基本概念\cite{intro_to_mpc}}
+基于键值的子结构指纹中的某一位将反应其代表的分子是否包含某个分子子结构（如氨基，羟基等）。当分子结构可以被指纹中所包含的若干子结构所表示时，这种指纹将比较有用，反之则不能很好地表示原分子结构。
+
+而拓扑或基于路径的指纹将遍历分子中所有可能的（一定长度的）路径$p$，并对路径进行哈希得到哈希值$h_p$，然后将指纹中对应位置$h_p$处赋为1。这种指纹可以用于快速的分子子结构筛查及搜索。
+
+类似于拓扑指纹，圆形指纹也利用了分子结构的哈希。但不同于拓扑指纹中考虑可能的路径，圆形指纹中考虑对以每个原子为中心一定半径圆内的分子子结构进行哈希来得到最终的分子指纹。这种指纹不适用于子结构查询（因为相同的子结构碎片可能对应不同的局部环境），但其被广泛应用于分子的整体结构相似性搜索。本文实验部分将主要使用某一种圆形指纹来实现相似度比对操作。
+
+\section{MPC的基本概念\citeu{intro_to_mpc}}
+\label{section: mpc}
 MPC(Secure Multi-party Computation，多方安全计算)被用于包含$n$个参与者的计算问题。我们希望在不泄漏中间信息的前提下得到想要多方计算的函数。更具体地说，假设我们有$n$个输入$x_1,\dots,x_n$，其中第$i$个参与者知道$x_i$但不知道别的输入，我们希望计算多元函数$f$合于
-$$
+\begin{equation}
 f(x_1,\dots,x_n)=(y_1,\dots,y_n).
-$$
+\end{equation}
 并满足第$i$个参与者只能得到$y_i$但得不到其它任何信息。
 
-我们已知某个著名的通用协议来实现这件事。为此我们先引入秘密共享（secret sharing）的概念。首先定义$t=\lfloor(n-1)/2\rfloor$。
+我们这里介绍一种Shamir协议来实现这个目标。为此我们先引入秘密共享（secret sharing）的概念。首先定义$t=\lfloor(n-1)/2\rfloor$。
 
 假设参与者$i$持有数字$x$（事实上这里的$x\in\mathbb{Z}_p$而不是任意整数），那么参与者$i$可以（均匀）随机地选取一个$\mathbb{Z}_p$上的多项式$g$合于$\deg(g)\leq t$且$g(0)=x$。然后，参与者$i$将$g(j)$发送给参与者$j,\ j=1,\dots,n$。这样一个整个操作称为参与者$i$进行了数字$x$的秘密共享。
 
-注意到由拉格朗日插值法，只要有超过$t$名参与者选择共享他们所持有的共享（如$g(1),\dots,g(t+1)$），那么我们可以重建出$g$进而恢复出所需的$x=g(0)$。另一方面，如果我们只已知$g$在$t$个点上的取值，那么$t$次多项式$g$在所得的条件概率空间中依然满足$g(0)$是$\mathbb{Z}_p$上的均匀分布，即没有任何信息能够从中恢复。因此这保证了联合的攻击者不超过$t$个时$x$的安全性。我们记$[x]$为$x$的共享的集合。
+注意到由拉格朗日插值法，只要有超过$t$名参与者选择共享他们所持有的共享（如$g(1),\dots,g(t+1)$），那么我们可以重建出$g$进而恢复出所需的$x=g(0)$。另一方面，如果我们只已知$g$在$t$个点上的取值，那么$t$次多项式$g$在所得的条件概率空间中依然满足$g(0)$是$\mathbb{Z}_p$上的均匀分布，即没有任何信息能够从中恢复。因此这保证了联合的攻击者不超过$t$个时$x$的安全性。我们记$[x]$为$x$的共享的集合，而$x_i$表示分配给第$i$个参与者的共享。
 
 以秘密共享机制为基础，我们可以实现（秘密的）数字上的算术运算。由于秘密共享机制是线性的，加法可以直接通过所有持有共享的参与者在本地对他们所持有的共享来完成。例如$[a]+[b]$即可得到$a+b$在所有参与者上的秘密共享。
 
-\section{tf-idf统计量的基本概念}
+对于乘法$a\times b$的相对要复杂一些。假设$f,g$是潜在的分别对应于$a,b$的$t$次多项式，且$h=fg,\deg(h)=2t$。首先需要注意到$a_ib_i$对应于多项式$fg$在这$n$个参与者上的秘密分配，但$fg$是一个$2t$次多项式，不满足我们的要求。因此我们这里应用一个技巧，即对每个$i$，参与者$i$计算$a_ib_i$对应的共享$[a_ib_i]$然后分配给所有$n$个参与者。由拉格朗日插值及$n>2t=\deg(h)$可知，存在常系数$\lambda_1,\dots,\lambda_n$使得
+\begin{equation}
+h(0)=\lambda_1 h(1)+\dots+\lambda_n h(n).
+\end{equation}
+从而我们可以（在每个参与者本地）计算
+\begin{align}
+[c] &:= \lambda_1[a_1b_1]+\dots+\lambda_n[a_nb_n]\nonumber\\
+&=[\lambda_1a_1b_1+\dots+\lambda_na_nb_n]\nonumber\\
+&=[\lambda_1h(1)+\dots+\lambda_n h(n)]\nonumber\\
+&=[h(0)]=[ab]
+\end{align}
+这样我们就得到了$ab$所对应的$n$个共享而没有泄露任何关于$a,b$的信息。
 
-在信息检索领域，tf-idf（term frequency-inverse document frequency）是一种统计方法以评估一个单词对于一个语料库中的某个文件的重要性。直觉上来说，显然一个单词对某个文件的重要性与在该文件中出现的次数成正比，但同时随着它在语料库中出现总频率的增加而下降。因此我们将tf-idf统计量定义为tf乘以idf。tf-idf统计量常被用于搜索领域以确定关键词与对应文档（页面）的关联度。tf（词频率）和idf（文档频率倒数）的几种常见的定义如下
+\section{TF-IDF统计量的基本概念\citeu{Rajaraman:2011:MMD:2124405}}
+\label{section: tfidf}
+
+在信息检索领域，TF-IDF（term frequency-inverse document frequency）是一种统计方法以评估一个单词对于一个语料库中的某个文件的重要性。直觉上来说，显然一个单词对某个文件的重要性与在该文件中出现的次数成正比，但同时随着它在语料库中出现总频率的增加而下降。因此我们将tf-idf统计量定义为tf乘以idf。tf-idf统计量常被用于搜索领域以确定关键词与对应文档（页面）的关联度。TF（词频率）和IDF（文档频率倒数）的几种常见的定义如下
 
 \begin{table}[H]
 	\centering
 	\begin{subtable}{0.45\textwidth}
 		\centering
-		\caption{几种tf的常见定义}
+		\caption{几种TF的常见定义}
 		\begin{tabular}{ll}
 		二元定义 & 0,1\\
 		原始计数 & $f_{t,d}$\\
@@ -73,40 +94,55 @@ $$
 	\end{subtable}
 	\begin{subtable}{0.45\textwidth}
 		\centering
-		\caption{几种idf的常见定义}
+		\caption{几种IDF的常见定义}
 		\begin{tabular}{ll}
 		平凡定义 & 1\\
 		文档频率倒数 & $\log\frac{N}{n_t}=-\log\frac{n_t}{N}$\\
 		平滑后的文档频率倒数 & $\log\left(1+\frac{N}{n_t}\right)$
 		\end{tabular}
 	\end{subtable}
-	\caption{tf及idf的常见定义}
+	\caption{TF及IDF的常见定义}
 \end{table}
-其中$f_{t,d}$表示单词$t$在文档$d$中出现的频率，$n_t$表示有单词$t$出现的文档的数量，$N$是总的文档数量。
+其中$f_{t,d}$表示单词$t$在文档$d$中出现的频率，$n_t$表示有单词$t$出现的文档的数量，$N$是总的文档数量。对于某个单词$t$，文档$d$及语料库$D$，$t$对于$d$的tfidf统计量将被定义为
+\begin{equation}
+TFIDF(t,d,D)=tf(t,d)\times idf(d,D).
+\end{equation}
 
 \section{SVD算法的基本概念}
 
 SVD(Singular Value Decomposition，奇异值分解)算法被用于将一个$m\times n$的矩阵$M$分解为
-$$
+\begin{equation}
 M=U\Sigma V^T，
-$$
+\end{equation}
 其中$U$和$V$分别是$m\times m$和$n\times n$的酉矩阵。而$\Sigma=\textup{diag}(\sigma_1,\dots,\sigma_r,0,\dots,0)$是一个前$r$项非零的对角线矩阵，满足$\sigma_1>\dots>\sigma_r>0$，这里$r$是矩阵$M$的秩。标准的SVD算法时间复杂度为$O(\min\{mn^2,m^2n\})$。
 
-SVD算法可以自然地用于将高维空间的点集投影到低维空间中去。特别地，我们假设$M$的每一列代表一个$\mathbb{R}^m$空间中的一个点，于是$M$表示一个包含$n$个点的$\mathbb{R}^m$中的点集。现在我们希望找到一个矩阵$H\in\mathbb{R}^{d\times n}$用来表示这$n$个点被投影到$\mathbb{R}^{d}$中的结果。我们希望找到一个$\mathbb{R}^m$中的$d$维超平面，让原始点到这个超平面上的投影点距离的平方和最小。可以证明\cite{Stewart92onthe}，
-$$
+SVD算法可以自然地用于将高维空间的点集投影到低维空间中去。特别地，我们假设$M$的每一列代表一个$\mathbb{R}^m$空间中的一个点，于是$M$表示一个包含$n$个点的$\mathbb{R}^m$中的点集。现在我们希望找到一个矩阵$H\in\mathbb{R}^{d\times n}$用来表示这$n$个点被投影到$\mathbb{R}^{d}$中的结果。我们希望找到一个$\mathbb{R}^m$中的$d$维超平面，让原始点到这个超平面上的投影点距离的平方和最小。可以证明\citeu{Stewart92onthe}，
+\begin{equation}
 M^*=U_d\Sigma_dV_d^T
-$$
+\end{equation}
 即是原始点在该超平面（在$\mathbb{R}^m$中）的投影坐标，其中$U_d$表示$U$的前$d$列，$V_d$表示$V$的前$d$列，$\Sigma_d=\textup{diag}(\sigma_1,\dots,\sigma_d)$。对这$n$个点进行$\mathbb{R}^n$上的旋转变换$U^T$得到
-$$
+\begin{equation}
 H^*=U^TM^*=\begin{pmatrix}
 I_r\\ O_{m-r}
 \end{pmatrix}
 \Sigma_d V_d^T.
-$$
+\end{equation}
 容易看到
 \begin{equation}
 H=\Sigma_d V_d^T
 \end{equation}
 即是我们需要的在超平面上的投影的坐标。
 
-\section{本文的主要贡献}
+\section{本文的主要工作}
+
+首先，我们使用python给出了一个基于Shamir共享协议的MPC实现。主要包括了秘密分配，秘密恢复，安全加法，安全乘法及安全二进制比较等功能的实现。在整体框架上使用多线程及消息队列以对多台服务器及客户端进行模拟，客户端将使用非对称加密保密地提交本地数据至服务器，以减少MPC协议中参与者的数量，提高反应速度。此外，在服务器实现上加入了所需的同步化以保证模拟的正确运行。
+
+我们在合成数据（向量）上及真实的药物指纹数据上进行了MPC比对的相关实验。如比对若干向量或是指纹的相似性并得到最接近的那个向量。药物信息主要来源于公开的药品数据库DrugBank。鉴于指纹向量的稀疏性，在指纹数据的实验中使用了两种不同的实现方式：
+	
+第一种是通过对向量上的非零项的坐标进行扫描式的比对以得到所需结果。这种方法最为直接，但这会引入大量的比较运算。在通常的本地运算中这不会是一个问题，但MPC的比较运算实现相当缓慢，因此造成了效率的相对低下。
+
+第二种方案中，我们将先从原始的指纹数据中提取特征向量，然后直接计算特征向量的距离（如欧氏距离）。这样的距离计算由于只涉及基本运算，其效率会比比较运算的实现快很多。但值得注意的是，特征向量的元素的值域很可能是实数而不是整数，由于我们的MPC算法运行在有限域上，因此我们需要对输入做必要的离散化。
+	
+关于特征向量，我们将先计算tf-idf矩阵然后对矩阵进行SVD降维以得到对应的特征向量。tf-idf的计算可以简单地通过MPC中的加法来完成，而对较为复杂的SVD，我们选择先通过本地计算本地数据的SVD，然后再在服务器上进行SVD结果的合成和迭代以得到近似解。如果原始的全体数据在各个服务器上的部分具有统计上的一致性，则可以预期这种做法能够取得较为准确的全局SVD解。
+
+我们在合成数据及真实数据上比对了两种方案的效率和结果。需要注意的是第二种方案的效率很大程度上取决于离散化的精度及分布式SVD算法的选取，且两种方案得到的查询结果也不一定一致。而结果表明采用合适的参数的情况下，第二种方案在保证查询准确性的前提下相比方案一具有更高的效率，这里准确性可以通过它们是否具有相似的实验性质来表示（如是否和某个蛋白质反应，是否具有某种毒性等）
