--- a/thuthesis/data/chap02.tex
+++ b/thuthesis/data/chap02.tex
@@ -1,1 +1,13 @@
 \chapter{相关工作}
+
+安全多方计算最早于1982年由Yao在\inlinecite{Yao:1982:PSC:1382436.1382751}中提出。该文所提出的问题可以抽象为，已知持有秘密输入的两人，如何在保证输入的秘密性的情况下获得输入的大小关系。\inlinecite{Yao:1982:PSC:1382436.1382751}中提出的方案基于RSA公钥体系的非对称加密实现，并说明了通过乱码电路（garbled circuit）我们可以安全地计算任何的有二方输入参与的函数。后来在\inlinecite{1987}中Goldreich，Micali和Wigderson证明了二方安全计算可以被推广到任意多方的安全计算中。
+	
+安全多方计算的协议和相关研究主要分为信息论安全模型和密码学安全模型。对于信息论安全模型中，参与者的通信信道是确保安全的，攻击者被假设可以拥有无限制的计算能力。而在密码学安全模型中，参与者处于可能不安全的网络通信中。而攻击者的计算资源是受限的，可能使用的攻击手段通常被限制在多项式时间内。Yao在\inlinecite{Yao:1982:PSC:1382436.1382751}中提出的方法属于密码学安全模型。
+
+安全多方计算已被用于多种实际应用中，如电子拍卖\citeu{10.1007/978-3-642-03549-4_20}，信息共享相关的数据查询\citeu{Jagadeesh692}、数据挖掘等\citeu{10.1007/978-3-540-28628-8_32}。
+
+\inlinecite{10.1007/978-3-642-03549-4_20}中提出了一种用于实现双向拍卖(double auction)的拍卖系统。该系统从用户（文中是种植甜菜的农民）处得到他们对应于不同成交价格的意向出售量（或买入量），然后通过服务器组计算出平衡的清算价格从而最优化市场成交量。该系统采用了包含多个服务器的安全多方计算方案以避免信息的泄露的风险。其中其所采用的MPC计算模式是Shamir秘密分发协议（本文也采用了该种模式），而在客户端向服务器提交秘密信息的过程中则结合了非对称加密以防止因为不安全信道所可能的信息泄露。这种模式在大量客户端存在的情况下可以很好地实现高效的安全计算的目标。
+
+\inlinecite{Jagadeesh692}中通过MPC协议给出了一种确保病人隐私的前提下进行基因信息共享以及通过基因信息进行诊断的方法。在基因诊断及共享过程中，个人信息私密泄露的可能性是长期以来公众对这种技术的重要担忧之一。个人的基因数据可能会揭示出其潜在的遗传病，生理缺陷，并进而导致其在各种社会场合中的歧视。对此，MPC提供了强有力的工具来实现在（尽可能）不泄露用户个人信息的情况下，通过多方安全计算得到用户所需的诊断结果。另一方面，研究者也可以在不获知用户的个人数据的情况下得到其所需要的样本上的基因统计量。
+
+\inlinecite{Aliasgari_securecomputation}中提供了一种基于位表示及Shamir协议的浮点小数及定点小数的运算协议。其中实现了包括浮点数的加法，乘法，除法，大小比较，求幂，取对数等一系列运算。且除了在加法上浮点运算相对定点运算慢很多（多个数量级）外，在其余运算的实验中浮点数运算均和定点数有相当的性能。
